# minerbot

./: .env  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  test_llm.py
.sisyphus/: boulder.json
.sisyphus/drafts/: backend-service-lifecycle.md  deepagents-stream-implementation.md  minimax-support.md
.sisyphus/plans/: agent-factory-cleanup.md  agent-store-upgrade.md  backend-service-lifecycle.md  llm-factory-implementation.md  long-term-memory-fix.md  long-term-memory.md  minerbot-cli-development.md  minimax-support.md  short-term-memory-implementation.md  super-agent-checkpointer.md  super-agent-sqlite-store.md  terminal-stream-tui.md
config/: agent_config.yaml  app_config.yaml  deepagents_config.yaml  llm.yaml  llm_config.yaml
data/: minerbot.db  minerbot.db-shm  minerbot.db-wal
docs/: architecture.md  deepagents-backends.md  deepagents-comprehensive-guide.md  deepagents-guide.md  deepagents-integration-issue.md  deepagents-research.md  deepagents-streaming-api.md  gateway-design.md  langgraph-memory-guide.md  llm-factory-design.md  llm-factory-quickstart.md  long-term-memory-design.md  memory-checkpointer-store-flow.md  memory-design.md  minimax-langchain-integration.md  repl-execution-flow.md  short-term-memory-design.md  项目目录结构设计.md
docs/plans/: README.md  phase-1-gateway-core.md  phase-2-protocol-handlers.md  phase-3-channel-adapter.md  phase-4-feishu-adapter.md  phase-5-dingtalk-adapter.md  phase-6-config-entry.md  phase-7-testing.md
examples/: __init__.py  basic_usage.py  deepagent_stream_mvp.py  langgraph_memory_mvp.py
issues/: long-term-memory-debug-report.md
memory/2026-03-12/: conversation_default.md
memory/2026-03-13/: conversation_default.md
plans/: agent-factory.md  agent-singleton-implementation.md
src/: __init__.py  main.py
src/agents/: __init__.py  agent_factory.py  config.py
src/app/: __init__.py  config.py  repl.py  service.py
src/chains/: __init__.py
src/llms/: __init__.py  config.py  factory.py  test_factory.py
src/memory/: __init__.py  manager.py  session.py
src/minerbot/: __init__.py  app.py  cli.py  config.py  exceptions.py  types.py  (+1 more)
tests/: __init__.py  test_config.py  test_deepagents.py  test_long_term_memory.py  test_memory_extractor.py  test_memory_integration.py  test_memory_storage.py  test_memory_summarizer.py  test_memory_triggers.py  test_minimax.py  test_minimax_anthropic.py  test_minimax_integration.py  test_service_tdd.py  test_short_term_memory.py  test_streaming.py  test_types.py
(+44 files in other folders)
