[project]
name = "minerbot"
version = "0.1.0"
description = "AI Assistant built with LangChain DeepAgents"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
[tool.hatch.build.targets.wheel]
packages = ["src"]
